--- a/dev/scss/boats.scss
+++ b/dev/scss/boats.scss
@@ -133,7 +133,6 @@
       transition: 0.3s;
       padding: 1rem 2.117rem;
 
-
       &:hover {
         cursor: pointer;
         opacity: 0.8;
@@ -239,7 +238,7 @@
     }
 
     &__downloader-button {
-      width: 100%;
+      width: 34.3rem;
       justify-content: center;
     }
   }
