--- a/dev/scss/mixines.scss
+++ b/dev/scss/mixines.scss
@@ -25,3 +25,10 @@
     height: 9.5rem;
   }
 }
+
+@media screen and (max-width: 743px) {
+  %colorBlocksProperties {
+    width: 14.8rem;
+    height: 9.5rem;
+  }
+}
